[package]
name = "build-support"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
cargo_metadata.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
sha2.workspace = true
ureq = { workspace = true, features = ["json"] }