[package]
name = "render"
version = "0.0.0"
publish = false
description = "Rendering example"
edition.workspace = true
license.workspace = true

[[bin]]
name = "render"
path = "src/main.rs"

[dependencies]
clap.workspace = true
env_logger.workspace = true
log.workspace = true
maplibre_native.workspace = true
url.workspace = true
slint = { version = "1.14", features = ["backend-android-activity-06"] }

[lints]
workspace = true

[build-dependencies]
slint-build = { version = "1.14"  }
