[package]
name = "slint_maplibre_native"
version = "0.1.0"
publish = false
edition = "2024"

[dependencies]
env_logger = "0.11"
image = { version = "0.25" }
maplibre_native = { path = "../..", features = ["wgpu"] }
# next release after 1.16.1 this can be changed to release again
slint = { git = "https://github.com/slint-ui/slint.git", rev = "055dfb65d608408eea1c64232e2647be550226e6", features = ["backend-android-activity-06", "renderer-femtovg-wgpu", "unstable-wgpu-29", "compat-1-2"] }


[build-dependencies]
slint-build = { git = "https://github.com/slint-ui/slint.git", rev = "055dfb65d608408eea1c64232e2647be550226e6" }

[workspace]
