[package]
name = "slint_map_libre_native"
version = "0.1.0"
publish = false
edition = "2024"

[features]
# Backend is selected per-OS through target-specific dependencies below. The
# explicit features here let callers override (`cargo run --features ...`).
metal = ["maplibre_native/metal"]
opengl = ["maplibre_native/opengl"]
glx = ["maplibre_native/glx"]
vulkan = ["maplibre_native/vulkan"]

[dependencies]
image = { workspace = true }
slint = { version = "1.16", features = ["backend-android-activity-06"] }

[target.'cfg(not(target_os = "macos"))'.dependencies]
maplibre_native = { path = "../..", features = ["vulkan"] }

[target.'cfg(target_os = "macos")'.dependencies]
maplibre_native = { path = "../..", features = ["metal"] }

[build-dependencies]
slint-build = { version = "1.16" }
