[package]
name = "slint_maplibre_native"
version = "0.1.0"
publish = false
edition = "2024"

[workspace]

[dependencies]
env_logger = "0.11"
image = { version = "0.25" }
maplibre_native = { path = "../..", features = ["wgpu"] }
slint = { version = "1.17.0", features = ["backend-android-activity-06", "renderer-femtovg-wgpu", "unstable-wgpu-29", "compat-1-2"] }

[build-dependencies]
slint-build = { version = "1.17.0" }
