[package]
name = "tile-server"
version = "0.0.0"
publish = false
edition.workspace = true

[dependencies]
axum.workspace = true
clap.workspace = true
image.workspace = true
maplibre_native = { workspace = true, features = ["pool"] }
serde.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
